Added Game class and Added Messages For the Installer
Added Game class (This may make it easier if we add more games)
Added Messages for the Auto Installer when something goes wrong to help
debugging.

--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -94,6 +94,7 @@
     <Compile Include="SonicAudioLib\IO\StringPool.cs" />
     <Compile Include="SonicAudioLib\IO\Substream.cs" />
     <Compile Include="SonicAudioLib\ProgressChangedEvent.cs" />
+    <Compile Include="src\Game.cs" />
     <Compile Include="src\CPK.cs" />
     <Compile Include="src\CodeLoader.cs" />
     <Compile Include="src\CreateUpdateForm.cs">
