--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -57,6 +57,7 @@
     <ApplicationIcon>res\icon.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
@@ -70,6 +71,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="src\Game.cs" />
@@ -162,6 +164,12 @@
     <Compile Include="src\SLWSaveForm.Designer.cs">
       <DependentUpon>SLWSaveForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="src\SS16MessageBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="src\SS16MessageBox.Designer.cs">
+      <DependentUpon>SS16MessageBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="src\Steam.cs" />
     <Compile Include="src\Theme.cs" />
     <Compile Include="src\UpdateForm.cs">
@@ -228,6 +236,9 @@
     <EmbeddedResource Include="src\SLWSaveForm.resx">
       <DependentUpon>SLWSaveForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="src\SS16MessageBox.resx">
+      <DependentUpon>SS16MessageBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="src\UpdateForm.resx">
       <DependentUpon>UpdateForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -258,7 +269,7 @@
     <None Include="res\icon96.png" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="res\codes\ForcesCodeLoader.dll" />
+    <Content Include="res\codes\ForcesModLoader.dll" />
     <Content Include="res\codes\SonicGenerationsCodeLoader.dll" />
     <Content Include="res\icon.ico" />
   </ItemGroup>
