--- a/HedgeModManager/res/Loaders.ini
+++ b/HedgeModManager/res/Loaders.ini
@@ -1,8 +1,10 @@
 [Sonic Forces]
 LoaderName="ForcesModLoader"
+LoaderName2="ForcesModLoader v6.5"
 LoaderVersion=6.5
 LoaderChangeLog="- Fixed loading redirected saves on first boot"
 [Sonic Generations]
 LoaderName="GCL"
+LoaderName2="GCL v1.0"
 LoaderVersion=1.0
 LoaderChangeLog="Initial Release"
