--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -67,7 +67,14 @@
       <DependentUpon>AboutWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Config\CPKREDIRConfig.cs" />
+    <Compile Include="HedgeMessageBox.xaml.cs">
+      <DependentUpon>HedgeMessageBox.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Steam.cs" />
+    <Page Include="HedgeMessageBox.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
