notify the user if mods directory doesnt exist and copy cpkredir

--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -130,5 +130,11 @@
   <ItemGroup>
     <Resource Include="Resources\Graphics\icon256.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\DAT_CPKREDIR_DLL.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\DAT_CPKREDIR_TXT.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
