--- a/HedgeModManager/res/Loaders.ini
+++ b/HedgeModManager/res/Loaders.ini
@@ -1,8 +1,8 @@
 [Sonic Forces]
 LoaderName="ForcesModLoader"
-LoaderVersion2="ForcesModLoader v6.6"
-LoaderVersion=6.6
-LoaderChangeLog="- Disabled ForcesModInfo check to help allow .NET binaries to run"
+LoaderVersion2="ForcesModLoader v6.7"
+LoaderVersion=6.7
+LoaderChangeLog="- Fixed Crash when Forces tries to load a closed Music Stream."
 [Sonic Generations]
 LoaderName="GCL"
 LoaderVersion2="GCL v1.0"
