Make windows consistent

--- a/HedgeModManager/HedgeModManager.csproj
+++ b/HedgeModManager/HedgeModManager.csproj
@@ -181,5 +181,8 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Graphics\IMG_FRAME_MM.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
