--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -8,3 +8,8 @@ LoaderName="GCL"
 LoaderName2="GCL v1.0"
 LoaderVersion=1.0
 LoaderChangeLog="Initial Release"
+[Sonic Lost World]
+LoaderName="GCL"
+LoaderName2="GCL v1.0"
+LoaderVersion=1.0
+LoaderChangeLog="Initial Release"
