--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -1,7 +1,7 @@
 [Sonic Forces]
 LoaderName="ForcesModLoader"
-LoaderName2="ForcesModLoader v6.5"
-LoaderVersion=6.5
+LoaderName2="ForcesModLoader v6.8"
+LoaderVersion=6.8
 LoaderChangeLog="- Fixed loading redirected saves on first boot"
 [Sonic Generations]
 LoaderName="GCL"
@@ -9,7 +9,7 @@ LoaderName2="GCL v1.0"
 LoaderVersion=1.0
 LoaderChangeLog="Initial Release"
 [Sonic Lost World]
-LoaderName="GCL"
-LoaderName2="GCL v1.0"
+LoaderName="LCL"
+LoaderName2="LCL v1.0"
 LoaderVersion=1.0
 LoaderChangeLog="Initial Release"
