--- a/HedgeModManager/packages.config
+++ b/HedgeModManager/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Costura.Fody" version="4.1.0" targetFramework="net46" />
   <package id="Fody" version="6.0.0" targetFramework="net46" developmentDependency="true" />
+  <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net46" />
+  <package id="HtmlRenderer.WPF" version="1.5.0.6" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net46" />
 </packages>
