--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -10,6 +10,6 @@ LoaderVersion=1.0
 LoaderChangeLog="Initial Release"
 [Sonic Lost World]
 LoaderName="LCL"
-LoaderName2="LCL v1.0"
-LoaderVersion=1.0
-LoaderChangeLog="Initial Release"
+LoaderName2="LCL v1.1"
+LoaderVersion=1.1
+LoaderChangeLog="Fixed OnExit bug"
