--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -5,9 +5,9 @@ LoaderVersion=6.8
 LoaderChangeLog="- Fixed loading redirected saves on first boot"
 [Sonic Generations]
 LoaderName="GCL"
-LoaderName2="GCL v1.0"
-LoaderVersion=1.0
-LoaderChangeLog="Initial Release"
+LoaderName2="GCL v1.1"
+LoaderVersion=1.1
+LoaderChangeLog="Updated ConfigTool Checker"
 [Sonic Lost World]
 LoaderName="LCL"
 LoaderName2="LCL v1.1"
