--- a/HedgeModManager/packages.config
+++ b/HedgeModManager/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Costura.Fody" version="4.1.0" targetFramework="net46" />
-  <package id="Fody" version="6.0.0" targetFramework="net46" developmentDependency="true" />
-  <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net46" />
+  <package id="Fody" version="6.0.5" targetFramework="net46" developmentDependency="true" />
+  <package id="gong-wpf-dragdrop" version="2.2.0" targetFramework="net46" />
+  <package id="HtmlRenderer.Core" version="1.5.0.6" targetFramework="net46" />
   <package id="HtmlRenderer.WPF" version="1.5.0.6" targetFramework="net46" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net46" />
 </packages>
