--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,12 @@
 version: '7.0-dev_r{build}'
 
+assembly_info:
+  patch: true
+  file: AssemblyInfo.*
+  assembly_version: "{version}"
+  assembly_file_version: "{version}"
+  assembly_informational_version: "{version}"
+
 environment:
   matrix:
     - appveyor_build_worker_image: Visual Studio 2019
