--- a/HedgeModManager/packages.config
+++ b/HedgeModManager/packages.config
@@ -5,5 +5,6 @@
   <package id="gong-wpf-dragdrop" version="2.2.0" targetFramework="net46" />
   <package id="HtmlRenderer.Core" version="1.5.0.6" targetFramework="net46" />
   <package id="HtmlRenderer.WPF" version="1.5.0.6" targetFramework="net46" />
+  <package id="Markdig" version="0.18.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net46" />
 </packages>
