Updated GCL to 2.1

--- a/HedgeModManager/Resources/ModLoader/Loaders.ini
+++ b/HedgeModManager/Resources/ModLoader/Loaders.ini
@@ -2,8 +2,8 @@
 LoaderVersion=6.8
 LoaderChangeLog="- Fixed loading redirected saves on first boot"
 [Sonic Generations]
-LoaderVersion=2.0
-LoaderChangeLog="- Rewrite GenerationsCodeLoader with LCL as base (Fixes various bugs)"
+LoaderVersion=2.1
+LoaderChangeLog="- Fixed strings getting destroyed after initialisation."
 [Sonic Lost World]
 LoaderVersion=1.1
 LoaderChangeLog="- Fixed OnExit bug"
