--- a/HedgeModManager/packages.config
+++ b/HedgeModManager/packages.config
@@ -4,5 +4,6 @@
   <package id="Fody" version="6.0.5" targetFramework="net46" developmentDependency="true" />
   <package id="gong-wpf-dragdrop" version="2.2.0" targetFramework="net46" />
   <package id="Markdig" version="0.18.0" targetFramework="net47" />
+  <package id="NAudio" version="1.9.0" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net47" />
 </packages>
